# Yaumataca

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  Notes.txt  README.md
c64tool/: build.sh  calibration.c  tc64upload.sh
doc/: Notes.txt  adding_gamepads.md  construction.md  construction_perfboard.md  flash_partitioning.md  pipeline.plantuml  reichelt.csv  user_manual.md
docs/: user_manual.md
housing/: README.md  housing_v1-cap.stl  housing_v1-main.stl  housing_v1.FCStd  housing_v2-Button.stl  housing_v2-Cap.stl  housing_v2-Main.stl  housing_v2.FCStd
pio/: c1351.pio
schematic/yaumataca/: .gitignore  fp-lib-table  yaumataca.kicad_pcb  yaumataca.kicad_prl  yaumataca.kicad_pro  yaumataca.kicad_sch
schematic/yaumataca/Library.pretty/: SOT-23_ohnesilk.kicad_mod
scripts/: build_release.sh  check_doxygen.sh  unittest.sh
src/: bare_api.cpp  config.h.in  controller_port.hpp  default_hid_handler.hpp  field_extractor.hpp  global.hpp  hid.hpp  hid_api.cpp  hid_api.hpp  hid_app.cpp  hid_app.hpp  hid_handler.cpp  hid_handler.hpp  hid_handler_builder.cpp  hid_handler_builder.hpp  hid_parser_tests.cpp  led_task.hpp  main.cpp  quadrature_encoder.hpp  small_fee.hpp  tusb_config.h  utility.h
src/handlers/: bare_xbox360_wireless.cpp  bare_xbox360_wireless.hpp  bare_xbox_one.cpp  bare_xbox_one.hpp  hid_dragoninc.cpp  hid_hizue.cpp  hid_impact.cpp  hid_mouse.cpp  hid_ps3.cpp  hid_ps4.cpp  hid_switch_pro.cpp
src/processors/: gamepad_autofire.hpp  gamepad_features.hpp  interfaces.hpp  joystick_mouse_switcher.hpp  mouse_amiga.hpp  mouse_atarist.hpp  mouse_c1351.cpp  mouse_c1351.hpp  mouse_mode_switcher.hpp  mouse_quadrature.hpp  pipeline.hpp  port_switcher.hpp  quadrature_encoder.hpp
test/: CMakeLists.txt  mock_mouse_c1351.cpp  test_field_extract.cpp  test_pipeline.cpp
test/stubs/: config.h  small_fee.hpp  utility.h
test/stubs/bsp/: board_api.h
test/stubs/hardware/: pio.h
